@@ -1,3 +1,6 @@
+2005-03-03 Ian Rutt
+ * Fixed array sized bug with glint orography output
+
 2005-03-03 Magnus Hagdorn
  * added glide launcher utility
 
